# rust-chemistry-parser

./: .rusty-hook.toml  Cargo.toml  README.md
examples/: equation.rs  formula-unit.rs
src/: ast_types.rs  db.rs  lexer.rs  lib.rs  main.rs  parser.rs  token_types.rs
src/parser/: ast_types.rs  lexer.rs  mod.rs  parser.rs  token_types.rs
