[package]
name = "chem-parse"
version = "0.2.0"
authors = ["Allan Jacobs"]
edition = "2021"
description = "A parser for simple chemical forumulas."
readme = "README.md"
repository = "https://github.com/Allan-Jacobs/rust-chemistry-parser"
license = "MIT"
keywords = ["chemistry", "parser"]
catagories = ["parsing", "science"]

[lib]
name = "chem_parse"
path = "src/lib.rs"

[dev-dependencies]
rusty-hook = "^0.11.2"